src/client/components/ComponentRendered.less
.component-renderer .CodeMirror {
  height: 600px;
}

.component-renderer__code-editor {
  margin-bottom: 30px;
}

.component-renderer__default-code-btn {
  position: absolute;
  top: 6px;
  right: 22px;
  padding: 4px 15px;
  z-index: 100;
  opacity: 0.5;
  &:hover {
    opacity: 1;
  }
}

.component-renderer__element-container-outer {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: auto;
  float: none !important;
}

.component-renderer__element-container-inner {
  width: 100%;
}

.component-renderer__element-container-inner--with-borders {
  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.25);
}

.component-renderer__element-container-inner--content-centered {
  flex: 1;
  display: flex;
  justify-content: center;
}

